--- a/nts-pool-management/assets/variables.css
+++ b/nts-pool-management/assets/variables.css
@@ -24,4 +24,6 @@
 
   --border-radius: 0.75rem;
   --border-width: 2px;
+
+  --nav-height: 8.5rem;
 }
